[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2021"
default-run="tutor-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Actix web framework and run-time
actix-web = "3.1.0"
actix-rt = "1.1.1"

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

