[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2021"
default-run="tutor-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Actix web framework and run-time
actix-web = "3.1.0"
actix-rt = "1.1.1"

# Data serialization library
serde = { version = "1.0.110", features = ["derive"] }
# Other utilities
chrono = {version = "0.4.11", features = ["serde"]}

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

